2005-09-29  Mathias Hasselmann  <mathias.hasselmann@gmx.de>

        reviewed by: plam
	
	* configure.in:
	* src/Makefile.am:
	* src/fcxml.c:

	Use libxml2 if requested (with --enable-libxml2) or if
	expat is not available.

2005-09-29  Patrick Lam  <plam@mit.edu>
	* src/fccache.c (FcGlobalCacheSave, FcDirCacheWrite):

	Fix multi-arch cache files: compute the position for the
	block to be added using info from OrigFile, not NewFile.

2005-09-28  Patrick Lam  <plam@mit.edu>
	* src/fccache.c (FcCacheMachineSignature):

        Cast results of sizeof() to unsigned int to get rid of
        warnings on x86_64 (thanks Matthias Clasen).

2005-09-27  Patrick Lam  <plam@mit.edu>
	* src/fccache.c (FcGlobalCacheSave, FcCacheCopyOld,
                FcDirCacheWrite):

        Use FcAtomic to rewrite cache files.

2005-09-27  Patrick Lam  <plam@mit.edu>

        * src/fccache.c (FcDirCacheWrite):

        Don't unlink the fonts.cache-2 file even if there's no data
        to write; just write an empty cache file.  (thanks Lubos Lunak)

2005-09-27  Patrick Lam  <plam@mit.edu>

        * src/fccache.c (FcDirCacheWrite):

        Allocate room for the subdirectory names in each
        directory cache.  Thanks to James Cloos for finding
        and diagnosing this bug!

2005-09-22  Patrick Lam  <plam@mit.edu>

        * fc-cache/fc-cache.sgml:
        * src/fccache.c (FcDirCacheWrite):
        * src/fccache.h (struct FcCache):

        Update documentation -- fc-cache's man page now says that you
        need to run fc-cache once per cached architecture; add some
        documentation to the FcCache structure.

        Make fc-cache write out fonts.cache-2 files for directories with
        no fonts (i.e. only subdirectories).
	
2005-09-22  Patrick Lam    <plam@mit.edu>
	* doc/edit-sgml.c:
	* fc-cache/fc-cache.sgml:
	* fc-case/fc-case.c:
	* fc-glyphname/fc-glyphname.c:
	* src/fcdefault.c:
	* src/fcfreetype.c:
	* src/fcinit.c:
	* src/fcxml.c:
